[package]
name = "envi"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cfg_aliases = "0.2.1"

[dependencies]
winit = "0.30"
wgpu = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.37", features = ["full"] }
image = "0.25.1"
